script parsing, bug squashign

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     "nav section aside"
     "footer footer footer";
 	grid-template-rows: 80px 1fr 40px;
-	grid-template-columns: 20% 1fr;
+	grid-template-columns: 22% 1fr;
 	/* grid-gap: 5px; */
   height: 100vh;
   margin: 0 auto;   
@@ -52,14 +52,13 @@ canvas {
 	cursor: none;
 }
 
-.script {
+.script{
 	max-width: 100%;
-	min-height: 100%;
-	overflow-y: auto;
+	max-height:75vh;
+	overflow-y: scroll;
 	overflow-x: hidden;
 	overflow-wrap: break-word;
 	grid-area: nav;
-	max-width: 100%;
 }
 header, nav, section, aside, footer {
 	padding: 5px;
